<resources>
    <string name="app_name">Formulario</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="action_layouts">Layouts</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="formulario_titulo">Formulario</string>
    <string name="formulario_volver">Volver</string>
    <string name="formulario_salvar">Salvar</string>
    <string name="formulario_large_text">Large text</string>
    <string name="vibrate_off">Vibrate OFF</string>
    <string name="vibrate_on">Vibrate ON</string>
    <string name="check_it_out">check it out</string>
</resources>