<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="135dp"
        tools:layout_editor_absoluteY="275dp"
        tools:context=".layoutsFrgament">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <Button
                android:id="@+id/bVolver"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:text="@string/formulario_volver" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:paddingTop="10dp"
                android:text="@string/formulario_titulo"
                android:textSize="20sp"/>

            <Button
                android:id="@+id/bSalvar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:text="@string/formulario_salvar" />
        </RelativeLayout>

        <ImageButton
            android:id="@+id/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/abc_vector_test"/>

        <TextView
            android:id="@+id/texto1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/formulario_large_text"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/numTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:hint="número de teléfono"/>

        <TextView
            android:id="@+id/texto2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/formulario_large_text"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/texto3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/formulario_large_text"
            android:textSize="20sp"/>

        <CheckBox
            android:id="@+id/checkbox1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_it_out"
            android:checked="true"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radiored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="red"
                android:layout_marginRight="10dp"/>

            <RadioButton
                android:id="@+id/radioblue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="blue"/>

            </LinearLayout>
        </RadioGroup>

        <TextView
            android:id="@+id/texto4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/formulario_large_text"
            android:textSize="20sp"/>

        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOff="@string/vibrate_off"
            android:textOn="@string/vibrate_on"/>

        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:stepSize="0.5"/>

    </LinearLayout>
